# bachelor-2025-team-horns_and_hooves

./: Dockerfile  FullProject.md  README.md  docker-compose.dev.yml  sleep-tracker-ai-2025.json
.github/workflows/: ci-cd.yml
Sleep_Tracker_AI/: .coveragerc  .gitignore  DOCUMENTATION.md  README.md  Формулы.txt
Sleep_Tracker_AI/.github/workflows/: check.yml
Sleep_Tracker_AI/docs/: enviroments.md  testing-report.md
Sleep_Tracker_AI/presentation/: Отчёт.pptx
Sleep_Tracker_AI/reports/: baseline_report.md
Sleep_Tracker_AI/sleepproject/: .coverage  Dockerfile  Makefile  celerybeat-schedule.bak  docker-compose-resolved.yml  docker-compose.yml  loki-config.yml  manage.py  prometheus.yml  promtail-config.yaml  pyproject.toml
Sleep_Tracker_AI/sleepproject/.ollama_data/: id_ed25519  id_ed25519.pub
Sleep_Tracker_AI/sleepproject/k8s/: celery-beat-deployment.yaml  celery-deployment.yaml  clickhouse-data-persistentvolumeclaim.yaml  clickhouse-deployment.yaml  clickhouse-service.yaml  db-deployment.yaml  env-configmap.yaml  grafana-cm1-configmap.yaml  grafana-deployment.yaml  langfuse-server-deployment.yaml  langfuse-server-service.yaml  loki-cm0-configmap.yaml  loki-data-persistentvolumeclaim.yaml  loki-deployment.yaml  loki-service.yaml  media-volume-persistentvolumeclaim.yaml  minio-deployment.yaml  minio-service.yaml  nginx-cm0-configmap.yaml  nginx-deployment.yaml  nginx-service.yaml  ollama-cm0-configmap.yaml  ollama-service.yaml  (+11 more)
backend/: manage.py  pyproject.toml
backend/backend/migrations/: 0003_alter_sleepstatistics_date.py
backend/backend/models/: models.py
backend/sleep_tracing_app/: admin.py  apps.py  csv_data_extraction.py  forms.py  models.py  tasks.py  urls.py  views.py
backend/sleep_tracing_app/migrations/: 0001_initial.py  0002_alter_sleepstatistics_calories_burned_and_more.py  0004_alter_sleeprecord_sleep_date_time_and_more.py  0005_sleepstatistics_is_recommended.py  0006_remove_sleepstatistics_is_recommended_and_more.py  0007_alter_userdata_height.py
backend/sleep_tracing_app/sleep_statistic/: __init__.py  calculate_sleep_statistic.py  gigachat.py  num_to_str.py  plot_diagram.py
backend/sleepproject/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
beckend/: Dockerfile  docker-compose.yml
data/: dataset.csv
database/: schema.sql
design/: user-flows.miro  wireframes.figma
docs/: 01-overview.md  database.md  definitions.md  goal-analysis.md  goals-achieved.md  improvements-plan.md  infrastructure.md  integration-report.md  metrics-dashboard.md  mvp-scope.md  quality-report.md  raci.md  requirments-v2.md  requirments.md  risk_analisis.md  roadmap.md  sprint4-plan.md  stakeholders.md  ui-components.md  use-cases.md  ux-scenarios.md  ux-testing-report.md
docs/architecture/: c4-actual.md
docs/best-practices/: frontend-best-practices.md
docs/reviews/: api-testing-report.md  architecture-review.md  code-review.md  ux-review.md
docs/tests/: __init__.py  test_forms_validation.py  test_views_extended.py  tests.py  tests_e2e.py  tests_tasks.py
frontend/templates/: add_users_sleep_data.html  home.html  sleep_records_from_csv.html  update_sleep_record.html  update_user.html
frontend/tests/: test_error_handling.py  tests_plot.py  tests_views_additional.py
ml/: prompt_templates.py  requirements.md
ml/evaluation/: evaluate_baseline.py  llm_judge.py
ml/models/: baseline.py
monitoring/: docker-compose.yml
monitoring/loki/: docker-compose-logging.yml
monitoring/prometheus/: prometheus.yml
(+83 files in other folders)
